# sqlx-sqlite-bug

./: .env  Cargo.toml  Makefile  README.md  config.toml  data.sql
src/: languages_stream.sql  main.rs
