[package]
name = "tempo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sqlite
sqlx = { version = "0.6", features = [
  "runtime-actix-native-tls",
  "sqlite",
  "json",
  "macros",
  "time",
] }
time = { version = "0.3.20", features = ["macros", "serde"] }
